fixed menu styling (left aligned, arrow right)

--- a/public/themes/basti_small.css
+++ b/public/themes/basti_small.css
@@ -171,7 +171,8 @@ body {
   padding: var(--std-menu-item-padding);
 }
 .basti_small .std-menu .p-panelmenu .p-panelmenu-icon {
-  left: calc(var(--std-menu-width) - 30px);
+  right: 10px;
+/*  left: calc(var(--std-menu-width) - 30px); */
 }
 .basti_small .std-menu .p-menuitem-icon:not(.profile-image):not(.profile-image-null) {
   min-width: var(--menuicon-size);
